--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#0077cc</color>
+    <color name="colorPrimaryLighter">#4BA8F8</color>
     <color name="colorPrimaryDark">#0065AA</color>
     <color name="colorPrimaryLight">#3599F3</color>
     <color name="colorAccent">#D81B60</color>
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="colorWhite">#FFFFFF</color>
+    <color name="colorGrey">#E2E2E2</color>
+    <color name="colorBlack">#000000</color>
+    <color name="colorTransparent">#00000000</color>
+    <color name="colorBlue">#02A3FA</color>
+    <color name="colorRed">#FA0202</color>
+    <color name="colorYellow">#FF6F00</color>
 </resources>
