--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -26,16 +26,16 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
-            android:id="@+id/editViewName"
+            android:id="@+id/editViewUID"
             android:layout_width="380dp"
             android:layout_height="51dp"
             android:layout_marginTop="9dp"
             android:ems="10"
-            android:hint="@string/username"
-            android:inputType="textPersonName"
+            android:hint="账号"
+            android:inputType="number"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editViewName" />
+            app:layout_constraintTop_toBottomOf="@+id/editViewUID" />
 
         <EditText
             android:id="@+id/editViewPassword"
