--- a/app/src/main/res/layout/activity_modify_user.xml
+++ b/app/src/main/res/layout/activity_modify_user.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".common.user.SignUpActivity">
+    tools:context=".common.user.ModifyUserActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -133,13 +133,13 @@
             >
 
             <Button
-                android:id="@+id/buttonSignUp"
+                android:id="@+id/buttonModify"
                 android:layout_width="370dp"
                 android:layout_height="wrap_content"
                 android:background="@drawable/blue_clickable_rectangle_with_small_rounded_corners"
                 android:layout_centerHorizontal="true"
                 android:textSize="25sp"
-                android:text="@string/register" />
+                android:text="@string/modify" />
         </RelativeLayout>
 
     </LinearLayout>
