--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -84,10 +84,11 @@
 
         <Button
             android:layout_gravity="center"
-            android:text="修改用户信息"
-            android:id="@+id/volunteerRecruitmentButton"
+            android:text="查看和修改我的用户信息"
+            android:id="@+id/buttonModify"
             android:textColor="#ffffff"
             android:layout_marginTop="5dp"
+            android:textSize="20sp"
             android:background="@drawable/blue_clickable_rectangle_with_small_rounded_corners"
             android:layout_width="300dp"
             android:layout_height="51dp">
@@ -97,6 +98,7 @@
             android:text="预约记录"
             android:id="@+id/appointmentRecordButton"
             android:textColor="#ffffff"
+            android:textSize="20sp"
             android:layout_marginTop="5dp"
             android:background="@drawable/blue_clickable_rectangle_with_small_rounded_corners"
             android:layout_width="300dp"
