--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -38,7 +38,7 @@
                         android:layout_width="315dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="right"
-                        android:inputType="number" />
+                        android:inputType="textPersonName" />
                 </LinearLayout>
 
                 <LinearLayout
